Add new dropdown

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>This is new feature</p>
-    <h1>Add new feaure branch</h1>
+    <h1>Add new feaure branch (dropdown)</h1>
 </body>
 </html>
